# orisa

./: .gitignore  LICENSE  README.md  docker-compose.yml
client/: .dockerignore  Dockerfile  nginx.conf  package.json
client/config/: webpack.config.js  webpackDevServer.config.js
client/public/: index.html
client/src/: App.css  App.tsx  ChatHistory.tsx  ChatHistoryRow.tsx  ChatPane.tsx  ChatPaneMessage.tsx  ChatSocket.ts  Editor.css  Editor.tsx  InteractionPane.css  InteractionPane.tsx  Messages.ts  index.css  setupProxy.js  types.d.ts
server/: .dockerignore  Cargo.toml  Dockerfile  README.md
server/src/: chat.rs  lua.rs  main.rs  object.rs  object_actor.rs  repo.rs  util.rs  world.rs
server/src/object/: actor.rs  api.rs  executor.rs  mod.rs  types.rs
server/src/world/: actor.rs  mod.rs  state.rs
