[package]
name = "rust-moo"
version = "0.1.0"
authors = ["Jesse Rusak <me@jesserusak.com>"]
edition = "2018"

[dependencies]
rlua = "0.17.0"
actix = "0.9.0"
actix-web-actors = "2.0.0"
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
uuid = { version = "0.8.1", features = ["v4"] }
