# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2

[package]
name = "orisa"
version = "0.1.0"
authors = ["Jesse Rusak <me@jesserusak.com>"]
edition = "2018"

[dependencies]
rlua = "0.17.0"
actix = "0.9.0"
actix-web-actors = "2.0.0"
actix-web = "2.0"
actix-rt = "1.0"
futures = "0.3.1"
listenfd = "0.3"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
uuid = { version = "0.8.1", features = ["v4"] }
multimap = "0.8.0"
regex = "1.3.4"
ctrlc = { version = "3.1.3", features = ["termination"] }
lazy_static = "1.4.0"
scoped-tls = "1.0.0"
git2 = "0.12.0"

[package.metadata.wharf.builder]
image = "rust:1.41" 

[package.metadata.wharf.output]
image = "debian:buster-slim"

[[package.metadata.wharf.binary]]
name = "orisa"
destination = "/usr/local/bin/orisa"
